@@ -1,5 +1,7 @@
+<!-- start of $Id$ -->
 <tr bgcolor="<?php echo $glob_theme->inbox_color ?>">
 	<td align="center" colspan="7" class="inbox">
 		<?php echo $html_no_mail ?>
 	</td>
 </tr>
+<!-- end of $Id$ -->
