@@ -1,3 +1,4 @@
+<!-- start of $Id$ -->
 <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
 		<td bgcolor="<?php echo $glob_theme->inside_color ?>">
@@ -136,3 +137,4 @@ function delete_attach()
 }
 //-->
 </script>
+<!-- end of $Id$ -->
