@@ -1,1 +1,3 @@
+<!-- start of $Id$ -->
 <p>Error occurred: <?php echo $ev->getMessage(); ?></p>
+<!-- end of $Id$ -->
